# mfmodify

./: .gitignore  README.md  pyproject.toml
examples/: example-regrid_and_pump_different_refinement_levels.ipynb  example-regrid_and_pump_different_refinement_levels.py  example-regrid_and_pump_single_well.py  example-regrid_model_and_compare.py  example-scenario_ensemble.ipynb  example-scenario_random_draw_scripts.py  example-scenarios.ipynb  regrid_example-compare_drawdown_at_different_refinements.ipynb  regrid_example-refine_model_and_compare.ipynb  regrid_minimal_example-refine_and_pump_single_well.py  regrid_minimal_example-refine_pump_multiple_refinement_levels.py  scenario_example.ipynb  working-regrid.py  working-scenario_random_draw_scripts.py
examples/historic_models/model_v1-metric/: mf6-tv_hist-canal_leakage-a-canal_dist.wel  mf6-tv_hist-canal_leakage-b-area_dist.wel  mf6-tv_hist-canal_leakage_rates-a-canal_dist.ts  mf6-tv_hist-canal_leakage_rates-b-area_dist.ts  mf6-tv_hist-infiltration_rates-irr.ts  mf6-tv_hist-infiltration_rates-semi.ts  mf6-tv_hist-lake_lowell.ghb  mf6-tv_hist-lake_lowell.ghb.obs  mf6-tv_hist-ny_canal.riv  mf6-tv_hist-ny_canal.riv.obs  mf6-tv_hist-ny_canal.wel  mf6-tv_hist-ny_canal_leakage.ts  mf6-tv_hist-pump-xtra.wel  mf6-tv_hist-pumping-extra_rates.ts  mf6-tv_hist-pumping-irr.wel  mf6-tv_hist-pumping-measured_municipal.wel  mf6-tv_hist-pumping-measured_municipal_rates.ts  mf6-tv_hist-pumping-semi.wel  mf6-tv_hist-pumping_rates-irr.ts  mf6-tv_hist-pumping_rates-semi.ts  mf6-tv_hist-tributary_underflow-deep.wel  mf6-tv_hist-tributary_underflow.wel  mf6-tv_hist-tributary_underflow_rates-deep.ts  mfsim.lst  (+19 more)
mf_modify/: __init__.py
mfmodify/: __init__.py  plotting.py  regrid.py  scenario.py  utils.py
