[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfmodify"
version = "0.1.0"
description = "Functions for reading and modifying existing MODFLOW 6 models."
readme = "README.md"
readme-content-type = "text/markdown"
authors = [
    { name = "Stephen Hundt", email = "shundt@usgs.gov" }
]
homepage = "https://github.com/shundt/mfmodify"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Hydrology" 
]
requires-python = ">=3.10"
dependencies = [
    "numpy >=1.20.3",
    "pandas >=2.0.0",
    "matplotlib >=1.4.0",
    "flopy >=3.9.2",
    "geopandas >=1.0.1",
    "shapely >=2.0"
]

[tool.setuptools.packages.find]
include = ["mf_modify", "mf_modify.*"]